# gelidum

./: .gitignore  CHANGELOG.md  LICENSE  LONGDESC.rst  README.md  pyproject.toml  requirements.txt  setup.py
.github/: workflows
.github/workflows/: check_format.yml  codeclimate_coverage.yml  main.yml  publish_on_pypi.yml  test.yml  test_coverage.yml  tests.yml
freeze/: __init__.py  exceptions.py  freeze.py  frozen.py  utils.py
gelidum/: __init__.py  decorator.py  decorators.py  dependencies.py  freeze.py  frozen.py  on_freeze.py  package.py  typing.py  unfreeze.py  utils.py
gelidum/collections/: __init__.py  frozendict.py  frozenlist.py  frozenndarray.py  frozenzet.py  immutable_list.py
gelidum/frozen/: __init__.py  frozen.py  frozen_base.py  frozen_class_creator.py  isfrozen.py
gelidum/tests/: test_time_performance.py
gelidum/tests/collection_tests/: test_frozendict.py  test_frozenlist.py  test_frozenndarray.py  test_frozenzet.py
gelidum/tests/frozen_tests/: test_isfrozen.py
gelidum/tests/gelidum_tests/: test_decorators.py  test_freeze.py  test_freeze_builtin_objects.py  test_freeze_dataclasses.py  test_freeze_functions.py  test_freeze_modules.py  test_freeze_numpy_objects.py  test_freeze_objects.py  test_freeze_objects_with_self_references.py  test_on_freeze.py  test_unfreeze.py
src/freeze/: __init__.py  freeze.py  frozen.py
tests/: test_freeze.py  test_time_performance.py
tests/collection_tests/: test_frozendict.py  test_frozenlist.py  test_frozenzet.py
tests/freeze/: test_freeze.py
tests/freeze_tests/: test_freeze.py
tests/gelidum_tests/: test_decorator.py  test_decorators.py  test_freeze.py
(+3 files in other folders)
